Fixed horizontal overflow on mobile devices

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -22,6 +22,11 @@ body {
     margin: 0px;
     padding: 0px;
     min-width: 300px;
+    overflow-x: hidden;
+}
+
+body {
+    position: relative;
 }
 
 ul {
